--- a/src/vsphere_cpi/Gemfile
+++ b/src/vsphere_cpi/Gemfile
@@ -1,7 +1,7 @@
 source 'https://rubygems.org'
 
 gem 'bosh_common', '1.3262.24.0'
-gem 'bosh_cpi_networking'
+gem 'bosh_cpi',    '2.5.0'
 gem 'builder',     '~> 3.2.3'
 gem 'json',        '~> 2.1', '>= 2.1.0'
 gem 'membrane',    '~> 1.1.0'
